--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -1,16 +1,30 @@
 - education:
-  degree: MSc in Computer Science
-  university: University of London
-  time: 2011 - 2012
-  details: "Describe your study here lorem ipsum dolor sit amet, consectetuer adipiscing
-  elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-  magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-  pellentesque eu, pretium quis, sem."
+  degree: Bachelor of Education (B.Ed.), Education Sciences
+  university: West University of Timisoara
+  time: 2014 - 2017
+  details: "Teaching elementary school and kindergarten"
+
 - education:
-  degree: BSc in Applied Mathematics
-  university: Bristol University
-  time: 2007 - 2011
-  details: "Describe your study here lorem ipsum dolor sit amet, consectetuer adipiscing
-  elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-  magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-  pellentesque eu, pretium quis, sem."
+  degree: Bachelor's degree, Primary Education
+  university: Kirchliche Pädagogische Hochschule Wien
+  time: 2016 - 2017
+  details: "Adult and Continuing Education and Teaching"
+
+- education:
+  degree: Bachelor of Education (B.Ed.), Adult Education
+  university: The Julius Maximilians University of Würzburg
+  time: 2015 - 2016
+  details: "Adult and Continuing Education and Teaching"
+
+
+- education:
+  degree: Master's degree, Translation studies, English translation, 2011 - 2013
+  university: West University of Timisoara
+  time: 2011 - 2013
+  details: "Legal translation, Interpretation, Translation of specialised texts"
+
+- education:
+  degree: Faculty of Letters, History and Theology, Applied Modern Languages
+  university: West University of Timisoara
+  time: 2008 - 2011
+  details: "English, French, Methodology of Translation"
