--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,8 +1,8 @@
 - interest:
-  item: Jogging
+  item: Music
   link:
 - interest:
-  item: Snowboarding
+  item: Teaching
   link:
 - interest:
   item: Cooking
