--- a/_data/languages.yml
+++ b/_data/languages.yml
@@ -1,9 +1,11 @@
 - language:
   idiom: English
-  level: Native
+  level: Professional working proficiency
+
+- language:
+  idiom: German
+  level: Professional working proficiency
+
 - language:
   idiom: French
-  level: Professional
-- language:
-  idiom: Spanish
-  level: Professional
+  level: Limited working proficiency
