remove profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ pic:
 summary: 'Adaptive person, hardworker and very ambitious, excited to learn new things. Good points: quick learning, time management, responsibility, perfectionism.'
 
 #sidebar links
-profile_picture_url: "https://media.licdn.com/dms/image/C4E03AQGkRzqn0TVu6Q/profile-displayphoto-shrink_800_800/0?e=1533168000&v=beta&t=PdvvQoaOUfrE7wUi-8gAOBMprd5zp-AkYsMObF7oxZE"
+#profile_picture_url:
 email: alina.sporea@gmail.com
 phone: 0745 045 059
 #website: blog.webjeda.com #do not add http://
