--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Settings
-title: gsuveti's resume
+title: alina's resume
 url: 'http://webjeda.com'
 baseurl: '/asporea-cv' #change it according to your repository name
 about: True # set to False or comment line if you want to remove the "How to use?" in the sidebar
